<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name" translatable="false">Football Scores</string>

    <string name="sync_account_type" translatable="false">app.foorball.in</string>
    <string name="content_authority" translatable="false">barqsoft.footballscores</string>


    <string name="todays_match_score_provider" translatable="false">>Football Scores</string>
    <string name="action_settings" translatable="false">>Settings</string>
    <string name="test_text" translatable="false">>Test</string>
    <string name="today" translatable="false">>Today</string>
    <string name="yesterday" translatable="false">>Yesterday</string>
    <string name="tomorrow" translatable="false">>Tomorrow</string>
    <string name="champions_league" translatable="false">>UEFA Champions League</string>
    <string name="bundesliga" translatable="false">>Bundesliga</string>
    <string name="premierleague" translatable="false">Premier League</string>
    <string name="primeradivison" translatable="false">Primera Division</string>
    <string name="seriaa" translatable="false">Serie A</string>
    <string name="matchday_text" translatable="false">Match day</string>
    <string name="group_stage_text" translatable="false">Group stages</string>
    <string name="first_knockout_round" translatable="false">First knockout round</string>
    <string name="quarter_final" translatable="false">Quarter Final</string>
    <string name="semi_final" translatable="false">Semi Final</string>
    <string name="final_text" translatable="false">Final</string>
    <string name="share_text" translatable="false">Share</string>
    <string name="about" translatable="false">About</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="about_text" translatable="false">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
    </string>
    <string name="help_us" translatable="false">To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.</string>
    <string name="note" translatable="false">During the off season, fake data will be added to the app.</string>
    <string name="licence" translatable="false">All team Logos are acquired from http://hdlogo.wordpress.com/ \nupon requesting permission form the owner.</string>
    <string name="credit" translatable="false">The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.</string>
    <string name="widget_text" translatable="false">This is a widget probably.</string>
    <string name="api_key" translatable="false">43b5294342c2439cb6b451c8ec3ce979</string>
    <string name="msg_match_start_time" translatable="false">match start time : <xliff:g id="time">%1$s</xliff:g></string>
    <string name="msg_match_start_time_short" translatable="false">start: <xliff:g id="time">%1$s</xliff:g></string>
    <string name="msg_goal_stat" translatable="false">Number of goal by <xliff:g id="team">%1$s</xliff:g> is <xliff:g id="goal">%2$s</xliff:g></string>

    <string name="dummy_data" translatable="false">>{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>
    <string name="msg_no_match" translatable="false">No match :(</string>
    <string name="title_widget_detail">Score Details</string>
    <string name="msg_share_score">Share the Score</string>
</resources>
